--- a/po/es.po
+++ b/po/es.po
@@ -635,7 +635,7 @@ msgstr "num"
 
 #: apply.c:4954
 msgid "remove <num> leading slashes from traditional diff paths"
-msgstr "eliminas <num> slashes iniciales de las rutas diff tradicionales"
+msgstr "elimina <num> slashes iniciales de las rutas diff tradicionales"
 
 #: apply.c:4957
 msgid "ignore additions made by the patch"
@@ -740,7 +740,7 @@ msgstr "no confies en el conteo de líneas en los headers del hunk"
 
 #: apply.c:5009 builtin/am.c:2253
 msgid "root"
-msgstr "raiz"
+msgstr "raíz"
 
 #: apply.c:5010
 msgid "prepend <root> to all filenames"
@@ -812,7 +812,7 @@ msgstr "solo guardar"
 
 #: archive.c:445
 msgid "compress faster"
-msgstr "comprimir mas rapido"
+msgstr "comprimir mas rápido"
 
 #: archive.c:453
 msgid "compress better"
@@ -896,7 +896,7 @@ msgid ""
 "This means the bug has been fixed between %s and [%s].\n"
 msgstr ""
 "La base de fisión %s esta mal.\n"
-"Esto quiere decir que el bug ha sido arreglado enter %s y [%s].\n"
+"Esto quiere decir que el bug ha sido arreglado entre %s y [%s].\n"
 
 #: bisect.c:737
 #, c-format
@@ -934,8 +934,8 @@ msgid ""
 "So we cannot be sure the first %s commit is between %s and %s.\n"
 "We continue anyway."
 msgstr ""
-"la base de fusion entre %s y [%s] tiene que ser saltada.\n"
-"Asi que no podemos estar seguros que el primer %s commit esta entre%s y %s.\n"
+"la base de fusión entre %s y [%s] tiene que ser saltada.\n"
+"Asi que no podemos estar seguros que el primer %s commit esta entre %s y %s.\n"
 "Vamos a continuar de todas maneras."
 
 #: bisect.c:798
@@ -991,7 +991,7 @@ msgstr[1] "(aproximadamente %d pasos)"
 msgid "Bisecting: %d revision left to test after this %s\n"
 msgid_plural "Bisecting: %d revisions left to test after this %s\n"
 msgstr[0] "Bisectando: falta %d revisión por probar después de esto %s\n"
-msgstr[1] "Bisectando: faltan %d revisiones por probar despues de esto %s\n"
+msgstr[1] "Bisectando: faltan %d revisiones por probar después de esto %s\n"
 
 #: blame.c:1757
 msgid "--contents and --reverse do not blend well."
@@ -1017,7 +1017,7 @@ msgstr "fallo la configuración del camino de revisión"
 msgid ""
 "--reverse --first-parent together require range along first-parent chain"
 msgstr ""
-"--reverse --first-parent jutnos requieren un rango a lo largo de la cadena "
+"--reverse --first-parent juntos requieren un rango a lo largo de la cadena "
 "del primer padre"
 
 #: blame.c:1826
@@ -1198,7 +1198,7 @@ msgstr "no se pudo abrir '%s'"
 
 #: bundle.c:140
 msgid "Repository lacks these prerequisite commits:"
-msgstr "Al repositorio le falta estos commits prerrequisito:"
+msgstr "El repositorio carace de estos commits de requisitos previos:"
 
 #: bundle.c:193
 #, c-format
@@ -1224,11 +1224,11 @@ msgstr "no se pudo engendrar el pack-objetcts"
 
 #: bundle.c:272
 msgid "pack-objects died"
-msgstr "pack-objects muerio"
+msgstr "pack-objects murió"
 
 #: bundle.c:314
 msgid "rev-list died"
-msgstr "rev-list muerio"
+msgstr "rev-list murió"
 
 #: bundle.c:363
 #, c-format
@@ -1242,7 +1242,7 @@ msgstr "argumento no reconocido: %s"
 
 #: bundle.c:461
 msgid "Refusing to create empty bundle."
-msgstr "Rechazando crear un bundle vacio."
+msgstr "Rechazando crear un bundle vacío."
 
 #: bundle.c:473
 #, c-format
@@ -1251,7 +1251,7 @@ msgstr "no se puede crear '%s'"
 
 #: bundle.c:501
 msgid "index-pack died"
-msgstr "index-pack murio"
+msgstr "index-pack murió"
 
 #: color.c:301
 #, c-format
@@ -1292,32 +1292,32 @@ msgstr ""
 #: config.c:721
 #, c-format
 msgid "bad config line %d in blob %s"
-msgstr "mala línea de config %d en el blob %s"
+msgstr "la línea de configuración %d es incorrecta en el blob %s"
 
 #: config.c:725
 #, c-format
 msgid "bad config line %d in file %s"
-msgstr "mala línea de config %d en el archivo %s"
+msgstr "la línea de configuración %d es incorrecta en el archivo %s"
 
 #: config.c:729
 #, c-format
 msgid "bad config line %d in standard input"
-msgstr "mala línea de config %d en la entrada standard"
+msgstr "la línea de configuración %d es incorrecta en la entrada standard"
 
 #: config.c:733
 #, c-format
 msgid "bad config line %d in submodule-blob %s"
-msgstr "mala línea de config %d en el submodulo-blob %s"
+msgstr "la línea de configuración %d es incorrecta en el submodulo-blob %s"
 
 #: config.c:737
 #, c-format
 msgid "bad config line %d in command line %s"
-msgstr "mala línea de config %d en la línea de comando %s"
+msgstr "la línea de configuración %d es incorrecta en la línea de comando %s"
 
 #: config.c:741
 #, c-format
 msgid "bad config line %d in %s"
-msgstr "mala línea de config %d en %s"
+msgstr "la línea de configuración %d es incorrecta en %s"
 
 #: config.c:869
 msgid "out of range"
@@ -1325,44 +1325,44 @@ msgstr "fuera de rango"
 
 #: config.c:869
 msgid "invalid unit"
-msgstr "unidad invalida"
+msgstr "unidad inválida"
 
 #: config.c:875
 #, c-format
 msgid "bad numeric config value '%s' for '%s': %s"
-msgstr "mal valor de config numérica '%s' para '%s': %s"
+msgstr "valor númerico de configuración incorrecto '%s' para '%s': %s"
 
 #: config.c:880
 #, c-format
 msgid "bad numeric config value '%s' for '%s' in blob %s: %s"
-msgstr "mal valor de config numérica '%s' para '%s' en el blob %s: %s"
+msgstr "valor númerico de configuración incorrecto '%s' para '%s' en el blob %s: %s"
 
 #: config.c:883
 #, c-format
 msgid "bad numeric config value '%s' for '%s' in file %s: %s"
-msgstr "mal valor de config numérica '%s' para '%s' en el archivo %s: %s"
+msgstr "valor númerico de configuración incorrecto '%s' para '%s' en el archivo %s: %s"
 
 #: config.c:886
 #, c-format
 msgid "bad numeric config value '%s' for '%s' in standard input: %s"
-msgstr "mal valor de config numérica '%s' para '%s' en la entrada standard: %s"
+msgstr "valor númerico de configuración incorrecto '%s' para '%s' en la entrada standard: %s"
 
 #: config.c:889
 #, c-format
 msgid "bad numeric config value '%s' for '%s' in submodule-blob %s: %s"
 msgstr ""
-"mal valor de config numérica '%s' para '%s' en el submodulo-blob %s: %s"
+"valor númerico de configuración incorrecto '%s' para '%s' en el submodulo-blob %s: %s"
 
 #: config.c:892
 #, c-format
 msgid "bad numeric config value '%s' for '%s' in command line %s: %s"
 msgstr ""
-"mal valor de config numérica '%s' para '%s' en la línea de comando %s: %s"
+"valor númerico de configuración incorrecto '%s' para '%s' en la línea de comando %s: %s"
 
 #: config.c:895
 #, c-format
 msgid "bad numeric config value '%s' for '%s' in %s: %s"
-msgstr "mal valor de config numérica '%s' para '%s' en %s: %s"
+msgstr "valor númerico de configuración incorrecto '%s' para '%s' en %s: %s"
 
 #: config.c:990
 #, c-format
@@ -1417,7 +1417,7 @@ msgstr "no es posible analizar '%s' de la configuración de la línea de comando
 #: config.c:2169
 #, c-format
 msgid "bad config variable '%s' in file '%s' at line %d"
-msgstr "mala variable de config '%s' en el archivo '%s' en la línea %d"
+msgstr "variable de configuración incorrecta '%s' en el archivo '%s' en la línea %d"
 
 #: config.c:2228
 #, c-format
